@@ -32,6 +32,7 @@ FIXES
 * UTF-8 characters like german ä are not processed properly by function url_encode (John Frickson)
 * nagios worker processes can hog CPU (huxley / John Frickson)
 * custom time periods that include special characters were not being handled in reports (John Frickson)
+* Fixed init script to wait up to 90 seconds then kill the nagios process (John Frickson)
 
 4.1.1 - 08/19/2015
 ------------------
